# intrinsic-simplification

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: windows.yml
00_coarsening/: README.md  main.cpp
01_prolongation_scalar/: CMakeLists.txt  README.md  main.cpp
02_mixture_quantities/: README.md  main.cpp
03_visualization/: README.md  main.cpp
04_multigrid/: README.md  main.cpp
05_prolongation_vector/: README.md  main.cpp
06_delaunay_refinement/: CMakeLists.txt  README.md  main.cpp
07_extract_mesh/: README.md  main.cpp
src/: always_flip_to_degree_three.cpp  always_flip_to_degree_three.h  always_flip_to_ear.cpp  always_flip_to_ear.h  angle_sum.cpp  angle_sum.h  bake_texture.cpp  bake_texture.h  barycentric_dot_product.cpp  barycentric_dot_product.h  barycentric_vector_to_cartesian.cpp  barycentric_vector_to_cartesian.h  build_angular_coordinates.cpp  build_angular_coordinates.h  build_edge_lengths.cpp  build_edge_lengths.h  build_glue_map.cpp  build_glue_map.h  build_intrinsic_info.cpp  build_intrinsic_info.h  ccw.cpp  ccw.h  cetm_flatten_boundary_vertex.cpp  cetm_flatten_boundary_vertex.h  cetm_flatten_interior_vertex.cpp  cetm_flatten_interior_vertex.h  coarsen_mesh.cpp  coarsen_mesh.h  compute_barycentric_robust.cpp  compute_barycentric_robust.h  connected_components.cpp  connected_components.h  cotan_Laplacian.cpp  cotan_Laplacian.h  cw.cpp  cw.h  delaunay_refine.cpp  delaunay_refine.h  diagonal_length.cpp  diagonal_length.h  (+144 more)
